Serial_Project/build/log/idf_py_stderr_output_67664
/home/local_storage/Esp_32_Projects/Serial_out/Serial_Project/main/Serial_Project.c: In function 'app_main':
/home/local_storage/Esp_32_Projects/Serial_out/Serial_Project/main/Serial_Project.c:22:27: error: 'portTICK_Period_MS' undeclared (first use in this function); did you mean 'portTICK_PERIOD_MS'?
   22 |         vTaskDelay(1000 / portTICK_Period_MS);
      |                           ^~~~~~~~~~~~~~~~~~
      |                           portTICK_PERIOD_MS
/home/local_storage/Esp_32_Projects/Serial_out/Serial_Project/main/Serial_Project.c:22:27: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/Serial_Project.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4336: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
